# sandbox24

./: .gitignore  CMakeLists.txt  eq.cpp  hello  main.cpp  main.cpp.txt  quad_eq.cpp  quad_eq.hpp  quadraticEcuation.cpp.txt  quadraticEcuation.hpp.txt  quadraticEquation.cpp  quadraticEquation.hpp  solutionequation.cpp  solutionequation.hpp
app/: CMakeLists.txt
app/source/: main.cpp
lib/: CMakeLists.txt
lib/include/: quad_eq.hpp
lib/source/: quad_eq.cpp
tests/: CMakeLists.txt  test_quadEq.cpp
